--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,10 +24,8 @@ requirements:
     - setuptools
 
   run:
-    - python
-    - websocket-client >=0.35,<1.0a0
-    - requests >=2.11,<3.0a0
-    - six >=1.10,<2.0a0
+    - python >=3.6,<4.0a0
+    - aiohttp >3.5.2
 
 test:
   imports:
