--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,46 +1,40 @@
 {% set name = "slackclient" %}
 {% set version = "2.0.0" %}
-{% set bundle = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash = "3f9da5b111b8c4944380674d193c3ffd5bd4a36cda8b58fb2404f900afb0b1fa" %}
 
 package:
-  name: {{ name }}
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ bundle }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ bundle }}
-  {{ hash_type }}: {{ hash }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 3f9da5b111b8c4944380674d193c3ffd5bd4a36cda8b58fb2404f900afb0b1fa
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
-  noarch: python
+  skip: True  # [py<=35]
+  script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
-  build:
+  host:
     - python
-    - setuptools
-
+    - pip
   run:
     - python
-    - websocket-client >=0.35,<1.0a0
-    - requests >=2.11,<3.0a0
-    - six >=1.10,<2.0a0
+    - aiohttp >3.5.2
+    - aiodns >1.0
 
 test:
   imports:
-    - slackclient
+    - slack
 
 about:
   home: https://github.com/slackhq/python-slackclient
-  license_file: LICENSE
   license: MIT
   license_family: MIT
+  license_file: LICENSE
   summary: 'Python client for Slack.com'
-  dev_url: https://github.com/slackhq/python-slackclient
-  doc_url: https://slackapi.github.io/python-slackclient/
+  doc_url: https://github.com/slackhq/python-slackclient
+  dev_url: https://slackapi.github.io/python-slackclient/
 
 extra:
   recipe-maintainers:
