--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,16 +10,17 @@ source:
   sha256: 3f9da5b111b8c4944380674d193c3ffd5bd4a36cda8b58fb2404f900afb0b1fa
 
 build:
-  number: 0
-  skip: True  # [py<=35]
+  number: 1
+  noarch: True
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
     - python
     - pip
+    - pytest-runner
   run:
-    - python
+    - python >=3.6
     - aiohttp >3.5.2
     - aiodns >1.0
 
