--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 1
-  noarch: True
+  skip: True  # [py<=35]
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
@@ -20,7 +20,7 @@ requirements:
     - pip
     - pytest-runner
   run:
-    - python >=3.6
+    - python
     - aiohttp >3.5.2
     - aiodns >1.0
 
