--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,17 +10,17 @@ source:
   sha256: 07ec8fa76f6aa64852210ae235ff9e637ba78124e06c0b07a7eeea4abb955965
 
 build:
-  number: 0
-  skip: true  # [py<=35]
+  number: 1
+  noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - pytest-runner
   run:
-    - python
+    - python >=3.6
     - aiohttp >3.5.2
     - aiodns >1.0
 
